--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
     "redux-logger": "^3.0.6"
   },
@@ -36,6 +37,7 @@
     "@react-native/typescript-config": "0.79.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.0.0",
     "@types/redux-logger": "^3.0.13",
     "@types/redux-persist": "^4.0.0",
